--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>Hello World!</h3>
             </div>
             <!-- New HTML content goes here! -->
-            <div class="my-style"></div>
+            <div class="richard-style"></div>
                 <h3>Rich Foil: really <em>loves</em> pizza</h3>
             <div class="my-bio">
                 <h3>Stephanie</h3>
