--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <!-- New HTML content goes here! -->
             <div class="my-style"></div>
                 <h3>Rich Foil: really <em>loves</em> pizza</h3>
+            <div class="Jeremiah-style">
+                <h3>Jeremiah Reid: really loves to hangout and <em>sleep</em></h3>
+            </div>
             <div class="my-bio">
                 <h3>Stephanie</h3>
                 <h4>
